# trailkarma

./: .databricks_setup.sql  .env  .env.example  .gitignore  AGENTS.md  ANDROID_DATABRICKS_SYNC.md  DATABRICKS_SETUP.md  PROJECT_DESCRIPTION.md  README.md  data_pipeline.py  inaturalist_sync_job.py  inaturalist_sync_notebook.py  output.txt  register_databricks_job.py  requirements_databricks.txt  setup_databricks.py  setup_databricks.sh  setup_databricks_final.py  setup_databricks_notebook.py  test_query.py  test_trails.py  verify_databricks.py
.claude/: plan.md
android_app/: LOCAL_BIODIVERSITY_MODEL_PACK.md  settings.gradle.kts
backend/: .env.example  README.md  __init__.py  acoustic.py  app.py  databricks_mirror.py  main.py  package-lock.json  package.json  photo_verification.py  postprocess.py  requirements.txt  schemas.py  storage.py
data/: food_reports.csv  library_walk.gpx  observations-712152.csv  water_reports.csv
docs/: RELAY_PRIVACY.md  REWARDS.md  TRACK_APPLICATION_GUIDE.md  bioacoustics.md  idea_statement.md
marimo/: 01_pct_trail_explorer.py  02_water_source_validator.py  03_species_explorer.py  04_snake_risk_explorer.py
scratch/: test_gpx.py
scripts/: android-avd-create.sh  android-emulator-start.sh  android-env.sh  android-install-debug.sh  android-physical-capture.sh  android-physical-debug-loop.sh  android-physical-install-debug.sh  android-physical-logcat.sh  android-sdk-bootstrap.sh  android-smoke-loop.sh  android-ui-dump.sh  reset.sql  (+2 more)
solana/programs/trail_karma_rewards/: Cargo.toml
solana/programs/trail_karma_rewards/src/: lib.rs
(+141 files in other folders)
